# CapstoneProject

./: .gitignore  .gitmodules  LICENSE  README.md
docs/: Common.tex
docs/Design/SoftArchitecture/: MG.tex
docs/Design/SoftDetailedDes/: MIS.tex
docs/DevelopmentPlan/: DevelopmentPlan.tex
docs/HazardAnalysis/: HazardAnalysis.tex
docs/ProblemStatementAndGoals/: ProblemStatement.tex
docs/SRS/: index.adoc  reflections.adoc
docs/SRS-Meyer/: index.adoc  metadata.adoc
docs/SRS-Meyer/models/: socialeyes-architecture.puml  socialeyes-environment-context.puml
docs/SRS-Meyer/parts/: control.adoc
docs/SRS/models/: scenario1.puml  scenario2.puml  scenario3.puml  scenario5.puml  socialeyes-sequence.puml
docs/VnVPlan/: VnVPlan.tex
docs/VnVReport/: VnVReport.tex
docs/projMngmnt/: POC_Team_Contrib.tex  Rev0_Productivity_Rep.tex  Rev0_Team_Contrib.tex
refs/: References.bib
src/: reporting_poc.py  reporting_poc_README.md
src/backend/: .gitignore  README.md  pyproject.toml
src/backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  worker.py
src/backend/app/processing/: __init__.py  cleaning.py  metrics.py  pipeline.py  schemas.py
src/backend/app/processing/detectors/: __init__.py  base.py  yolov8n.py
src/backend/app/processing/tracking/: __init__.py  iou_single.py
src/backend/tests/: test_end_to_end.py
src/engagement_analytics/: README.md  __init__.py  engagement_analytics.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.css  App.jsx  index.css  main.jsx
(+80 files in other folders)
